src/test/deca/codegen/valid/unary-minus.deca
// Description:
//    Inversion d'un entier
//
// Résultats:
//    Affiche l'opposé de l'entier donné
{
    int a = -5;
    int b = -a;
    println(b);
}
