src/test/deca/codegen/invalid/var-non-ini.deca
// Description:
//    Utilisation d'une variable non initialisée dans une opération
//
// Résultats:
//    Erreur d'exécution: variable non initialisée

{
   int a, b;
   a = 5;
   println(a + b); 
}